# ny_start

./: README.md  brannrisiko.db  pyproject.toml
.github/workflows/: CICD.yml
src/Tests/: test_api.py
src/app/: database.py  frost_api.py  main.py  scheduler.py
src/app/static/: index.html
src/frcm/: __main__.py
