[project]
name = "frcm"
version = "0.1.0"
description = ""
maintainers = [
    { "name" = "Lars Michael Kristensen", "email" = "lmkr@users.noreply.github.com" },
    { "name" = "Patrick Stünkel", "email" = "webminz@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "pydantic >= 2.9",
    "python-dateutil == 2.8.2",
    "numpy >= 1.26.4",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "requests>=2.33.0",
    "sqlmodel>=0.0.37",
    "apscheduler>=3.11.2",
    "slowapi>=0.1.9",
]

[project.scripts]
frcm = "frcm:console_main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
# Legg til filer eller mapper du vil at Ruff skal ignorere helt
exclude = [
    "src/frcm/fireriskmodel/compute.py",
    "src/frcm/fireriskmodel/preprocess.py"
]
[tool.ruff.lint]
[tool.ruff.lint.per-file-ignores]
# Ignorer F401 (ubrukte importer) i alle __init__.py filer
"__init__.py" = ["F401"]

# Ignorer E741 (tvetydig variabelnavn som 'l') i compute.py
"src/frcm/fireriskmodel/compute.py" = ["E741"]
